[144] [Contextual Tasks] Fix responsiveness
Display grid was allowing the children elements to expand outside the
bounds of the screen. Additionally, the toolbar was covering the
webview. This CL fixes.

Before: http://shortn/_0zdHuljknl
After: http://shortn/_tFuFXl3E3V

(cherry picked from commit 734c2b38d918cb0888f8568bc6f4613ef3ef0b09)

Fixed: b:473534636
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7370363
Commit-Queue: Duncan Mercer <mercerd@google.com>
Cr-Original-Commit-Position: refs/heads/main@{#1564591}
Bug: 475338251
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7457853
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7559@{#3393}
Cr-Branched-From: 223dfbac1c7542a06b422390d954afe5b560b607-refs/heads/main@{#1552494}

--- a/chrome/browser/resources/contextual_tasks/app.css
+++ b/chrome/browser/resources/contextual_tasks/app.css
@@ -59,8 +59,8 @@
 
   background-color: var(--search-background-color);
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
+  grid-template-columns: 100%;
+  grid-template-rows: auto 1fr;
   height: 100%;
   overflow: hidden;
 }
@@ -147,7 +147,7 @@
 #threadFrame {
   border: none;
   grid-column: 1;
-  grid-row: 1;
+  grid-row: 2;
   overflow: hidden;
 }
 
@@ -219,7 +219,7 @@ error-page {
 .flex-center {
   align-self: end;
   grid-column: 1;
-  grid-row: 1;
+  grid-row: 2;
 }
 
 :host([is-zero-state_]) .flex-center {
